Added waitForMethodToLoad method and added Dont check if element is timer condition in remove duplicate method.

--- a/OSUpgrade/test-output/emailable-report.html
+++ b/OSUpgrade/test-output/emailable-report.html
@@ -9,9 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">11,163,958</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">406,545</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">InnovativeProduct.OSUpgrade.SettingTest10</td><td><a href="#m0">Test2</a></td><td rowspan="1">1578455268211</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m1">enterText</a></td><td rowspan="1">1578455268231</td><td rowspan="1">11163906</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">InnovativeProduct.OSUpgrade.SettingTest10</td><td><a href="#m0">Test2</a></td><td rowspan="1">1578578462283</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m1">enterText</a></td><td rowspan="1">1578578462300</td><td rowspan="1">406503</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">InnovativeProduct.OSUpgrade.SettingTest10#Test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">InnovativeProduct.OSUpgrade.SettingTest10#enterText</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
